Add NC priorities, adjust responses and implements fixes
