# src/app/controllers/Audit/GetAnswersController.ts
@@ -26,4 +26,27 @@ export class GetAnswersController {
       return res.json(response);
     }
   }
+
+  async handleNonConformances(req: Request, res: Response) {
+    let response: ResponseFormat = {
+      success: false,
+      data: null,
+      message: "",
+    };
+    try {
+      const { auditId } = req.params;
+      if (!auditId) throw new Error("Audit id parameter was not provided.");
+      const service = new GetAnswersService();
+      const nConformances = await service.getNCs(auditId);
+      response = {
+        success: true,
+        data: nConformances,
+        message: "Respostas listadas com sucesso!",
+      };
+    } catch (err) {
+      if (err instanceof Error) response.message = err.message;
+    } finally {
+      return res.json(response);
+    }
+  }
 }
